Add three <p> elements with some basic information

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
-<!DOCTYPE html>
-</html>
+<p> My name is Danica. </p>
+<p> I was born and raised in Chicago. </p>
+<p> My favorite season is spring. </p>
+
   
