--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-<p> My name is Danica. </p>
-<p> I was born and raised in Chicago. </p>
-<p> My favorite season is spring. </p>
-
-  
+<!DOCTYPE html>
+<head>
+</head>
+<body>
+	<p> My name is Danica. </p>
+	<p> I was born and raised in Chicago. </p>
+	<p> My favorite season is spring. </p>
+</body>
+</html>
