Making changes to index

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="utf-8">
+  <title>Lab 1</title>
 </head>
 <body>
-	<p> My name is Danica. </p>
-	<p> I was born and raised in Chicago. </p>
-	<p> My favorite season is spring. </p>
+  <p>My name is Danica.</p>
+  <p>I was born and raised in Chicago.</p>
+  <p> My favorite season is spring. </p>
 </body>
 </html>
